--- a/client/src/Styles/User/userInfo.scss
+++ b/client/src/Styles/User/userInfo.scss
@@ -1,34 +1,9 @@
-
 .name-container {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-    .change-name-button {
-    }
-    .name {
-        font-size: 20px;
-    }
+    padding: 3%;
     .user-input {
         display: flex;
-        margin-bottom: 10px;
-        .input-field {
-            width: 150px;
-        }
-        .submit-user-button {
-            width: 40px;
-            height: 40px;
-            border-radius: 10%;
-            &:hover {
-                border-color: green;
-            }
-        }
-        .return-user-button {
-            width: 40px;
-            height: 40px;
-            border-radius: 10%;
-            &:hover {
-                border-color: red;
-            }
-        }
     }
 }
