--- a/client/src/Styles/User/userPage.scss
+++ b/client/src/Styles/User/userPage.scss
@@ -9,32 +9,7 @@ $font-f: "Tenor Sans", sans-serif;
     background-color: cornflowerblue;
     margin-right: 400px;
     margin-left: 25%;
-
-    .app-wrapper {
-        display: grid;
-        grid-template-areas: "user-info task-list";
-        grid-template-columns: 40% 60%;
-    }
-}
-.task-list {
-    grid-area: task-list;
-    display: flex;
-    flex-direction: column;
-}
-.user-info {
-    grid-area: user-info;
-    .log-out-button {
-        transition-duration: 0.4s;
-        background-color: whitesmoke;
-        border-radius: 10px;
-        width: 70%;
-        height: 50px;
-        margin-top: 10%;
-        text-align: center;
-        font-family: $font-f;
-        &:hover {
-            background-color: red;
-            color: whitesmoke;
-        }
+    .tasks {
+        margin-top: 20%;
     }
 }
