--- a/client/src/Styles/auth.scss
+++ b/client/src/Styles/auth.scss
@@ -11,12 +11,7 @@
         display: flex;
         flex-direction: column;
         .regist-link {
-            text-decoration: none;
-            color: black;
-            &:hover {
-                color: black;
-                text-decoration: none;
-            }
+            margin-left: 33%;
         }
     }
 }
